--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -61,13 +61,13 @@
 
         <li class="nav-item">
             <a class="nav-link" href="#">
-                <i class="fa-solid fa-box-open"></i>
-                <span>Product</span>
+                <i class="fa fa-mobile" ></i>
+                <span>&ensp;&nbsp;Product</span>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" th:href="@{~/user/list-user}">
                 <i class="fa fa-users"></i>
                 <span>User</span>
             </a>
