--- a/src/main/resources/templates/admin/fragments/category.html
+++ b/src/main/resources/templates/admin/fragments/category.html
@@ -18,7 +18,7 @@ layout:decorate="~{admin/index}">
                     <div class="card shadow mb-4">
                         <div class="card-body">
                             <div class = "card-tittle">
-                                <a th:href="@{~/category/insert}"><button class ="btn btn-primary" style = "float:left">Insert</button></a>
+                                <a th:href="@{~/category/insert}"><button class ="btn btn-primary" method="get" style = "float:left">Insert</button></a>
                                 <br>
                             </div>
                             <br>
@@ -30,9 +30,6 @@ layout:decorate="~{admin/index}">
                                     <tr>
                                         <th>ID</th>
                                         <th>Category name</th>
-                                        <th>Order-index</th>
-                                        <th>Parent</th>
-                                        <th>Slug</th>
                                         <th>Create date</th>
                                         <th>Update date</th>
                                         <th></th>
@@ -44,12 +41,9 @@ layout:decorate="~{admin/index}">
                                     <tr th:each="list:${listCategory}">
                                         <td th:utext="${list.id }"></td>
                                         <td th:utext="${list.name }"></td>
-                                        <td th:utext="${list.orderIndex }"></td>
-                                        <td th:utext="${list.parent }"></td>
-                                        <td th:utext="${list.slug }"></td>
-                                        <td th:utext="${list.createAt }"></td>
-                                        <td th:utext="${list.updateAt }"></td>
-                                        <td><a th:href="@{/category/delete(id=${list.id})}" onclick = "myFunction()">Delete</a>
+                                        <td th:utext="${list.createdAt }"></td>
+                                        <td th:utext="${list.updatedAt }"></td>
+                                        <td><a class="text-danger" th:href="@{/category/delete(id=${list.id})}" onclick = "myFunction()">Delete</a>
                                             <script>
                                                 function myFunction() {
                                                     if(confirm("Bạn chắc chắn muốn xoá?") == true) {
@@ -62,7 +56,7 @@ layout:decorate="~{admin/index}">
                                                 }
                                             </script>
                                         </td>
-                                        <td><a th:href="@{~/category/update/${id}}">Update</a></td>
+                                        <td><a th:href="@{~/category/update(id=${list.id})}">Update</a></td>
                                     </tr>
                                     </tbody>
                                 </table>
