--- a/src/main/resources/templates/admin/register.html
+++ b/src/main/resources/templates/admin/register.html
@@ -31,11 +31,12 @@
                         </div>
                         <form action="#" th:object="${user}" method="post" th:action="@{/user/save}">
                             <div class="form-group row">
-                                <div class="col-sm-9 mb-3 mb-sm-0">
-                                    <input type="text" th:field="*{name}" class="form-control form-control-user" id="exampleFirstName"
+                                <div class="col-sm-10 mb-3 mb-sm-0">
+                                    <input type="text" th:field="*{name}" class="form-control form-control-user" id="name"
                                            placeholder="Name">
+                                    <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                                 </div>
-                                <div class="col-sm-3">
+                                <div class="col-sm-2" align="right">
                                     <label>
                                         <select th:field="*{sex}" class="form-control form-control-user">
                                             <option th:value="'nam'" th:text="Nam"></option>
@@ -47,10 +48,12 @@
                             <div class="form-group">
                                 <input type="email" th:field="*{email}" class="form-control form-control-user" id="exampleInputEmail"
                                        placeholder="Email Address">
+                                <p class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
                             </div>
                             <div class="form-group">
                                 <input type="number" th:field="*{cmnd}" class="form-control form-control-user" id="exampleInputCCCD"
                                        placeholder="ID number">
+                                <p class="text-danger" th:if="${#fields.hasErrors('cmnd')}" th:errors="*{cmnd}"></p>
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
