--- a/src/main/resources/templates/client/shop.html
+++ b/src/main/resources/templates/client/shop.html
@@ -6,6 +6,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/5.1.3/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="/webjars/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -17,8 +19,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}" href="#">
-            <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="70" class="d-inline-block align-top" alt=""/>
+        <a class="navbar-brand" th:href="@{/client/index}" href="#" style="align-items: center">
+            <img th:src="@{/images/shopping-online.png}"  src="../static/images/shopping-online.png" width="auto" height="70" class="d-inline-block align-top" alt=""/>
+            Web Phone
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,52 +31,49 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+                    <a class="nav-link" th:href="@{/client/index}" href="#">home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
+                    <a class="nav-link" th:href="@{/client/shop}" href="#">shop</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
+                    <a class="nav-link" th:href="@{/client/cart}" href="#">cart<sup th:value="5"></sup></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">logout</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
-                </li>
-                <li class="nav-item active">
-                    <span class="nav-link" th:text="${cartCount}">0</span>
+                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
                 </li>
             </ul>
 
         </div>
     </div>
 </nav>
-<div class="container" style="margin-top: 30px">
-    <div class="row">
-        <div class="col-sm-3">
+<div class="container-fluid" style="margin-top: 30px;margin-right: 30px">
+    <div class="row" >
+        <div class="col-sm-2">
             <h4>Categories</h4>
             <ul class="list-group">
-                <a th:href="@{/shop}"><li class="list-group-item">All Products</li></a>
+                <a th:href="@{/client/shop}"><li class="list-group-item">All Products</li></a>
                 <a href="" th:each="category, iStat : ${categories}"
-                   th:href="@{/shop/category/{id}(id=${category.id})}"><li
-                               class="list-group-item" th:text="${category.name}"></li></a>
+                   th:href="@{/client/shop/category/{id}(id=${category.id})}"><li
+                        class="list-group-item" th:text="${category.name}"></li></a>
 
             </ul>
         </div>
-        <div class="col-sm-9">
-            <div class="card" style="margin-top: 20px" th:each="product : ${products}">
-                <div class="row no-gutters">
-                    <div class="col-sm-5 d-flex justify-content-center">
-                        <img class="" height="150px" width="150px" th:src="@{${'/productImages/' + product.imageName}}" th:alt="${product.name}">
-                    </div>
-                    <div class="col-sm-7 d-flex justify-content-center">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="${product.name}"></h5>
-                            <h4>₹ <span th:text="${product.price}"></span></h4>
-                            <p th:text="${product.description}" >Suresh Dasari is a founder and technical lead developer in tutlane.</p>
-                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.id})}" class="btn btn-primary">View Product</a>
+        <div class="col-sm-10">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <div class="col" th:each="product : ${products}">
+                    <div class="card h-100" style="margin-top: 20px" heigh="450px">
+                        <div class="row no-gutters">
+                            <div class="col-sm-5 d-flex justify-content-center">
+                                <img class="" height="150px" width="150px" th:src="@{${'/productImages/' + product.image}}" th:alt="${product.name}">
+                            </div>
+                            <div class="col-sm-7 d-flex justify-content-center">
+                                <div class="card-body">
+                                    <h5 class="card-title" th:text="${product.name}"></h5>
+                                    <h4>$ <span th:text="${product.salePrice}" ></span>&ensp;VND</h4>
+                                    <a href="#" th:href="@{/client/shop/viewproduct/{id}(id=${product.id})}" class="btn btn-primary">View Product</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -81,10 +81,6 @@
         </div>
     </div>
 </div>
-
-
-
-
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
