--- a/src/main/resources/templates/client/viewProduct.html
+++ b/src/main/resources/templates/client/viewProduct.html
@@ -15,14 +15,13 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}" href="#">
-            <img th:src="@{/images/logo.png}" src="../static/images/logo.png" width="auto" height="70"
-                 class="d-inline-block align-top" alt=""/>
+        <a class="navbar-brand" th:href="@{/client/index}" href="#" style="align-items: center">
+            <img th:src="@{/images/shopping-online.png}"  src="../static/images/shopping-online.png" width="auto" height="70" class="d-inline-block align-top" alt=""/>
+            Web Phone
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -30,22 +29,16 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+                    <a class="nav-link" th:href="@{/client/index}" href="#">home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
+                    <a class="nav-link" th:href="@{/client/shop}" href="#">shop</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
+                    <a class="nav-link" th:href="@{/client/cart}" href="#">cart<sup th:value="5"></sup></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">logout</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
-                </li>
-                <li class="nav-item active">
-                    <span class="nav-link" th:text="${cartCount}"></span>
+                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
                 </li>
             </ul>
 
@@ -55,18 +48,15 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-sm-5 d-flex justify-content-center">
-            <img class="mt-5" height="300px" width="300px" src="" th:src="@{${'/productImages/' + product.imageName}}"
+            <img class="mt-5" height="300px" width="300px" src="" th:src="@{${'/productImages/' + product.image}}"
                  alt="">
         </div>
         <div class="col-sm-7 mt-5">
             <h2 th:text="${product.name}"></h2>
-            <p th:text="${product.category.name}"></p>
-            <h2>₹ <span th:text="${product.price}"></span></h2>
-            <h5>Weight:
-                <spna th:text="${product.weight}"></spna> grams.
-            </h5>
+            <p th:text="${product.categoryName}"></p>
+            <h2>₹ <span th:text="${product.salePrice}"></span></h2>
             <p th:text="${product.description}"></p>
-            <a href="" th:href="@{/addToCart/{id}(id = ${product.id})}" class="btn btn-primary">Add to cart</a>
+            <a href="" th:href="@{/client/addToCart/{id}(id = ${product.id})}" class="btn btn-primary">Add to cart</a>
         </div>
     </div>
 </div>
