--- a/src/main/resources/templates/client/shop.html
+++ b/src/main/resources/templates/client/shop.html
@@ -37,7 +37,10 @@
                     <a class="nav-link" th:href="@{/client/shop}" href="#">shop</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/client/cart}" href="#">cart<sup th:value="5"></sup></a>
+                    <a class="nav-link" th:href="@{/client/cart}" href="#">cart</a>
+                </li>
+                <li class="nav-item active">
+                    <span class="nav-link" >[[${#request.remoteUser}]]</span>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
