--- a/src/main/resources/templates/admin/fragments/category-insert.html
+++ b/src/main/resources/templates/admin/fragments/category-insert.html
@@ -22,7 +22,7 @@
                         <label class = "col-sm-1 col-form-label" >Tên </label>
                         <div class = "col-sm-6">
                             <input type="text" th:field="*{name}" placeholder="" th:errorClass="is-invalid"/>
-                            <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+                            <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                         </div>
                     </div>
                     <div class = "form-group row">
