--- a/src/main/resources/templates/admin/fragments/product-update.html
+++ b/src/main/resources/templates/admin/fragments/product-update.html
@@ -13,12 +13,13 @@
 <body>
 <div layout:fragment="content">
     <div class="container">
-        <h3>Add a new Product</h3>
-        <form th:action="@{/admin/product/insert}" method="post" th:object="${product}" enctype="multipart/form-data">
+        <h3>Update Product</h3>
+        <form th:action="@{/admin/product/update}" method="post" th:object="${product}" enctype="multipart/form-data">
             <div class="row">
                 <div class="col-sm-5">
 
                     <input type="hidden" name="id" th:field="*{id}">
+                    <input type="hidden" name="createdAt" th:field="*{createdAt}">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" class="form-control" required th:field="*{name}" name="name" id="name"
@@ -62,7 +63,7 @@
                         <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/productImages/' + product.image}}" style="margin-top: 20px" alt=" ">
                     </div>
                     <input type="hidden" name="imgName" th:value="${product.image}">
-                    <button type="submit" class="btn btn-primary">Create
+                    <button type="submit" class="btn btn-primary">Update
                         <script>
                             function readURL(input){
                                 if(input.files && input.files[0]){
