--- a/src/main/resources/templates/admin/fragments/category.html
+++ b/src/main/resources/templates/admin/fragments/category.html
@@ -43,7 +43,7 @@ layout:decorate="~{admin/index}">
                                         <td th:utext="${list.name }"></td>
                                         <td th:utext="${list.createdAt }"></td>
                                         <td th:utext="${list.updatedAt }"></td>
-                                        <td><a class="text-danger" th:href="@{/admin/category/delete(id=${list.id})}" onclick = "myFunction()">Delete</a>
+                                        <td><a class="btn btn-danger" th:href="@{/admin/category/delete(id=${list.id})}" onclick = "myFunction()">Delete</a>
                                             <script>
                                                 function myFunction() {
                                                     if(confirm("Bạn chắc chắn muốn xoá?") == true) {
@@ -56,7 +56,7 @@ layout:decorate="~{admin/index}">
                                                 }
                                             </script>
                                         </td>
-                                        <td><a th:href="@{~/admin/category/update(id=${list.id})}">Update</a></td>
+                                        <td><a class="btn btn-primary" th:href="@{~/admin/category/update(id=${list.id})}">Update</a></td>
                                     </tr>
                                     </tbody>
                                 </table>
