--- a/src/main/resources/templates/admin/fragments/product-update.html
+++ b/src/main/resources/templates/admin/fragments/product-update.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="form-group">
                         <label for="category">Select Category</label>
-                        <select class="form-control" th:field="*{categoryId}" id="category" name="category">
+                        <select class="form-control" th:field="*{category.id}" id="category" name="category">
                             <option th:each="category :${listcategory}"
                                     th:value="${category.id}"
                                     th:text="${category.name}"
