--- a/src/main/resources/templates/client/viewProduct.html
+++ b/src/main/resources/templates/client/viewProduct.html
@@ -56,7 +56,7 @@
         </div>
         <div class="col-sm-7 mt-5">
             <h2 th:text="${product.name}"></h2>
-            <p th:text="${product.categoryName}"></p>
+            <p th:text="${product.category.name}"></p>
             <h2>$ <span th:text="${product.salePrice}"></span> VND</h2>
             <p th:text="${product.description}"></p>
             <a href="" th:href="@{/client/cart/addToCart/{id}(id = ${product.id})}" class="btn btn-primary">Add to cart</a>
