--- a/src/main/resources/templates/client/cart.html
+++ b/src/main/resources/templates/client/cart.html
@@ -84,7 +84,7 @@
                                                         class="fas fa-trash-alt mr-1"></i> Remove item </a>
 
                                             </div>
-                                            <p class="mb-0"><span><strong>₹<span th:text="${item.salePrice}"></span></strong></span></p>
+                                            <p class="mb-0"><span><strong>$ <span th:text="${item.salePrice}"></span></strong></span></p>
                                         </div>
                                     </div>
                                 </div>
